--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,6 +31,10 @@
   margin-right: 88px;
 }
 
+.menu-item:last-child {
+  margin-right: 0;
+}
+
 .menu-item a {
   font-size: 18px;
   color: #FFFFFF;
@@ -57,8 +61,7 @@
 }
 
 .main-content {
-  padding-top: 103px;
-  padding-bottom: 199px;
+  padding: 100px 0 200px;
 }
 
 .main-content .container {
@@ -67,6 +70,8 @@
 
 .main-info {
   max-width: 608px;
+  position: relative;
+  z-index: 1;
 }
 
 .main-small-info {
@@ -150,10 +155,6 @@
   border-radius: 16px;
 }
 
-.products-item-image {
-  height: 250px;
-}
-
 .products-item-image img {
   max-width: 100%;
 }
@@ -193,6 +194,7 @@
   justify-content: center;
   width: 182px;
   height: 62px;
+  margin-left: 5px;
 }
 
 .button.product-button span:first-child {
@@ -292,4 +294,250 @@
 .rights {
   font-size: 16px;
   line-height: 20px;
+}
+
+@media screen and (max-width: 1240px) {
+  .products-items {
+    grid-template-columns: repeat(2, 384px);
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1170px) {
+  .menu {
+    margin-left: 50px;
+  }
+
+  .menu-item {
+    margin-right: 45px;
+  }
+
+  .main-image {
+    width: 900px;
+    height: 100%;
+    top: 0px;
+    left: calc(590 / 1920 * 100%);
+  }
+
+  .why-items {
+    gap: 50px;
+    grid-template-columns: repeat(2, 312px);
+  }
+}
+
+
+@media screen and (max-width: 1140px) {
+  .order-image {
+    position: absolute;
+    top: 0;
+    right: calc(100% - 464px);
+    z-index: -1;
+  }
+  
+  .order-form {
+    margin: 60px auto 0;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .menu-list {
+   display: none;
+  }
+
+  .products-items {
+    grid-template-columns: repeat(1, 384px);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .why-items {
+    grid-template-columns: repeat(1, 312px);
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .main-title {
+    font-size: 60px;
+  }
+
+  .main-text {
+    font-size: 18px;
+  }
+
+  .main-image {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .main-content {
+    padding: 100px 0;
+  }
+
+  .main-text {
+    font-size: 15px;
+  }
+
+  .main-action .button {
+    margin: 0 auto;
+  }
+
+  .products {
+    padding-bottom: 50px;
+  }
+
+  .order {
+    padding: 50px 0;
+  }
+
+  .order-form {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .order-form-text {
+    font-size: 15px;
+  }
+
+  .order-form-input {
+    width: 100%;
+    height: 62px;
+  }
+  
+  .order-form-input input {
+    width: 100%;
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 455px) {
+  .order-form {
+    padding: 30px 20px;
+  }
+
+  .order-image {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .why-items {
+    grid-template-columns: repeat(1, 100%);
+  }
+
+  .products-items {
+    grid-template-columns: repeat(1, 100%);
+  }
+
+  .products-item-image {
+    margin: 0 auto;
+  }
+
+  .footer .container {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .why-item-title {
+    font-size: 20px;
+    padding: 15px 0;
+  }
+  
+  .why-item-text {
+    font-size: 15px;
+  }
+
+  .products-item {
+    padding: 15px;
+  }
+
+  .products-item-title {
+    font-size: 20px;
+    padding-top: 0;
+  }
+
+  .products-item-image {
+    max-width: 150px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .main-title {
+    font-size: 50px;
+  }
+
+  .main-action .button {
+    width: 100%;
+  }
+
+  .button.product-button {
+    padding: 10px;
+    width: 120px;
+    height: 62px;
+  }
+
+  .order-form {
+    font-size: 10px;
+    padding: 20px 10px;
+  }
+
+  .order-form-input input {
+    padding: 0;
+  }
+
+  .order-form-text {
+    font-size: 12px;
+  }
+
+  .form-button {
+    font-size: 15px;
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 275px) {
+  .logo img{
+    width: 110px;
+  }
+
+  .main-content {
+    padding: 50px 0;
+  }
+
+  .main-title {
+    font-size: 40px;
+    margin: 20px 0 30px;
+  }
+
+  .main-text {
+    font-size: 15px;
+    line-height: 1.2;
+    margin-bottom: 30px;
+  }
+
+  .why {
+    padding-bottom: 120px;
+  }
+
+  .products-item {
+    padding: 10px;
+  }
+
+  .products-item-title {
+    font-size: 15px;
+    padding-bottom: 10px;
+  }
+
+  .products-item-text {
+    font-size: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 220px) {
+  .products-item {
+    padding: 5px;
+  }
 }
