--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,9 +26,8 @@
         <span class="main-small-info">Новое меню</span>
         <h1 class="main-title">бургер чеддер</h1>
         <p class="main-text">
-          Мы обновили наше меню, спешите попробовать сезонные новинки и насладиться отличным вкусом наших
-          бургеров.
-          Готовим для вас лучшие бургеры в городе из отборной мраморной говядины.
+          Мы обновили наше меню, спешите попробовать сезонные новинки <span class="nowrap">и насладиться</span> отличным вкусом наших
+          бургеров. Готовим для вас лучшие бургеры <span class="nowrap">в городе</span><span class="nowrap"> из отборной</span> мраморной говядины.
         </p>
         <div class="main-action">
           <button class="button" id="main-action-button" (click)="scrollTo(products)">Смотреть меню</button>
@@ -47,24 +46,24 @@
         <img src="assets/images/burger.png" alt="burger" class="why-item-image">
         <div class="why-item-title">Авторские рецепты</div>
         <div class="why-item-text">
-          Наши бургеры обладают уникальным сочетанием вкусов и не похожи ни на какие другие. Мы тщательно
-          отбираем лучшие ингредиенты и сочетания вкусов для нашего меню.
+          Наши бургеры обладают уникальным сочетанием вкусов и не похожи ни на какие другие. Мы тщательно
+          отбираем лучшие ингредиенты и сочетания вкусов для нашего меню.
         </div>
       </div>
       <div class="why-item">
         <img src="assets/images/meat.png" alt="burger" class="why-item-image">
         <div class="why-item-title">Мраморная говядина</div>
         <div class="why-item-text">
-          Для наших бургеров мы используем отборную 100% мраморную говядину, которую закупаем исключительно
-          у фермеров. Мы уверены в качестве нашего мяса.
+          Для наших бургеров мы используем отборную 100% мраморную говядину, которую закупаем исключительно
+          у фермеров. Мы уверены в качестве нашего мяса.
         </div>
       </div>
       <div class="why-item">
         <img src="assets/images/food%20truck.png" alt="burger" class="why-item-image">
         <div class="why-item-title">Быстрая доставка</div>
         <div class="why-item-text">
-          Мы доставляем в пределах МКАД за 30 минут, а если не успеем — доставка бесплатно. Мы тщательно
-          упаковываем наши бургеры, чтобы по дороге они не остыли.
+          Мы доставляем в пределах МКАД за 30 минут, а если не успеем — доставка бесплатно. Мы тщательно
+          упаковываем наши бургеры, чтобы по дороге они не остыли.
         </div>
       </div>
     </div>
@@ -73,7 +72,7 @@
 
 <section class="products" id="products" #products>
   <div class="container">
-    <div class="products-title common-title">выберите свой бургер</div>
+    <div class="products-title common-title">выберите <span class="nowrap">свой бургер</span></div>
     <div class="products-items">
       <div class="products-item" *ngFor="let product of productsData">
         <div class="products-item-image">
@@ -83,8 +82,8 @@
         <div class="products-item-text">{{product.text}}</div>
         <div class="products-item-extra">
           <div class="products-items-info">
-            <div class="products-item-price">{{product.price}} {{currency}}</div>
-            <div class="products-item-weight">{{product.grams}} гр</div>
+            <div class="products-item-price"><span class="nowrap">{{product.price}} {{currency}}</span></div>
+            <div class="products-item-weight"><span class="nowrap">{{product.grams}} гр</span></div>
           </div>
           <div class="products-item-action">
             <button class="button product-button" (click)="scrollTo(order, product)">
@@ -110,7 +109,7 @@
     <div class="order-title common-title">оформление заказа</div>
     <img src="assets/images/order_image.png" alt="Burger in the box" class="order-image">
     <div class="order-form">
-      <div class="order-form-text">Заполните все данные и наш менеджер свяжется с вами для подтверждения заказа</div>
+      <div class="order-form-text">Заполните все данные и наш менеджер свяжется <span class="nowrap">с вами</span> для <span class="nowrap">подтверждения заказа</span></div>
       <div class="order-form-inputs" [formGroup]="form">
         <div class="order-form-input" [class]="{'error': form.get('order')?.invalid && (form.get('order')?.dirty || form.get('order')?.touched)}">
           <input type="text" placeholder="Выберите товар в списке" id="burger" formControlName="order" readonly>
