--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,12 @@ body {
   white-space: nowrap;
 }
 
+@media (hover: none) {
+  .button:active {
+    background: linear-gradient(95.61deg, #ac6115 0%, #9e7a19 100%);
+  }
+}
+
 @media screen and (max-width: 560px) {
   .common-title {
     font-size: 30px;
