--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ body {
   white-space: nowrap;
 }
 
-@media (hover: none) {
+@media screen and (max-width: 800px) {
   .button:active {
     background: linear-gradient(95.61deg, #ac6115 0%, #9e7a19 100%);
   }
