--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ body {
   color: #191411;
 }
 
-.button:hover {
+.button:active {
   background: linear-gradient(95.61deg, #ac6115 0%, #9e7a19 100%);
 }
 
@@ -66,8 +66,8 @@ body {
   white-space: nowrap;
 }
 
-@media screen and (max-width: 800px) {
-  .button:active {
+@media screen and (min-width: 800px) and (hover: hover) {
+  .button:hover {
     background: linear-gradient(95.61deg, #ac6115 0%, #9e7a19 100%);
   }
 }
